<resources>
    <string name="app_name">FarmersGen</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Search</string>
    <string name="tab_text_3">Cart</string>
    <string name="tab_text_4">Account</string>

    <string name="action_search">Search</string>
    <string name="connection_message">No Internet Connection</string>
    <!--activity_login-->
    <string name="login_button">LOGIN</string>
    <string name="havent">Haven"t Create the Account?</string>
    <string name="signup">Signup?</string>

    <!--activity_signup-->
    <string name="signuptext">SignUp</string>
    <string name="createacc">Create an account with new mobile number</string>
    <string name="termscondition">By Creating an account, I accept the Terms and Conditions</string>
    <string name="submit">SUBMIT</string>

    <string name="submitOTP">Submit OTP</string>

    <string name="delete">DELETE</string>
    <!--  <string name="action_settings">Settings</string>-->
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signupname">Name</string>
    <string name="login">Login</string>
    <string name="skip">Skip Login</string>
    <string name="signin">signIn</string>
    <string name="already">Already Have an Account?</string>
    <string name="terms">Accepting Terms and Condition</string>
    <string name="resend">RESEND</string>
    <string name="otpsent">OTP has been sent to </string>
    <string name="myaccount">My Account</string>
    <string name="aclist">Address, Favourites, Offers</string>

    <string name="Rs">\u20B9</string>

    <!--Checkout-->
    <string name="checkout">CHECKOUT</string>

    <string name="pleaseenterMo">Please Enter Your Mobile Number</string>

    <string name="saveDetails">After your first payment, we will save your details like Name,Address for future use</string>

    <string name="codScript">   Currently We are serving Cash On Delivery only,Order and Relax we collect our money once goods delivered at your doot step</string>

</resources>
