<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical"
    tools:context=".signin.MenuAccountFragmentLoginActivity">

    <ImageView
        android:layout_width="@dimen/hundred_dp"
        android:layout_height="@dimen/hundred_dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/ten_dp"
        android:layout_marginTop="@dimen/fifty_dp"
        android:contentDescription="@null"
        android:src="@drawable/organic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/twenty_dp"
        android:orientation="vertical"
        android:paddingTop="@dimen/ten_dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginMobileNoMAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:paddingTop="@dimen/ten_dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextLMAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingTop="@dimen/ten_dp"
                android:textColor="@color/black"
                android:textSize="@dimen/large_font" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginPasswordAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextLPAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/fifteen_dp"
                android:paddingStart="@dimen/three_dp"
                android:paddingTop="@dimen/ten_dp"
                android:textColor="@color/black"
                android:textColorHint="@color/alpha_gray"
                android:textSize="@dimen/large_font" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/loginForgetPasswordAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/forgot_password"
            android:textColor="@color/app_black"
            android:textSize="@dimen/medium_font" />

        <Button
            android:id="@+id/btnLoginAcc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/login"
            android:onClick="OnlickLoginMenuAccountFragment"
            android:background="@drawable/rec_gradiant"
            android:textColor="@color/white"
            android:textSize="@dimen/large_font" />





    </LinearLayout>


</RelativeLayout>