<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".signin.LoginForgetPasswordActivity">

    <ImageView
        android:layout_width="@dimen/hundred_dp"
        android:layout_height="@dimen/hundred_dp"
        android:layout_gravity="center"
        android:contentDescription="@null"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fifty_dp"
        android:layout_marginBottom="@dimen/ten_dp"
        android:src="@drawable/icon_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/twenty_dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingTop="@dimen/ten_dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pleaseenterMo"
            android:textColor="@color/green"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold"
            />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/MobileNoForForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        android:paddingTop="@dimen/ten_dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextLMForForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingTop="@dimen/ten_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/large_font" />

    </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginBtnForForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/submit"
            android:onClick="OnlickLoginForgetPassword"
            android:background="@drawable/rec_gradiant"
            android:textColor="@color/white"
            android:textSize="@dimen/large_font" />


    </LinearLayout>


</RelativeLayout>