<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.OTPActForSuccRegistrationAtViewCart">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/otpTextForForgetPasswordAtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:layout_marginTop="@dimen/thirty_dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/otpsent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
                android:textSize="@dimen/twenty_dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/otp_MobileNumber_AtForgetPasswordAtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/five_dp"

                android:layout_marginTop="@dimen/thirty_dp"
                android:layout_toRightOf="@+id/otpTextForForgetPasswordAtSignUp"
                android:fontFamily="sans-serif-condensed"
                android:text=""
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
                android:textColor="@color/FragmentGreen"
                android:textStyle="bold" />


        </RelativeLayout>


        <com.goodiebag.pinview.Pinview
            android:id="@+id/otpForRegistrationAtSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            app:cursorVisible="true"
            app:forceKeyboard="true"
            app:inputType="number"
            app:password="false"
            app:pinLength="4"></com.goodiebag.pinview.Pinview>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/timeShower_ForgetPasswordAtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginRight="@dimen/five_dp"
                android:layout_toLeftOf="@id/reSend_ForgetPasswordAtSignUp"
                android:fontFamily="sans-serif-condensed"
                android:padding="@dimen/five_dp"
                android:text="Time"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reSend_ForgetPasswordAtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/five_dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="@dimen/five_dp"
                android:text="@string/resend"
                android:textStyle="bold"
                android:visibility="invisible" />

        </RelativeLayout>


        <TextView
            android:id="@+id/otpErrorForLoginForgetPasswordAtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otpForRegistrationAtSignUp"
            android:text="otp"
            android:visibility="gone" />


        <Button
            android:id="@+id/otpRegistrationSubmitAtViewCartAtSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/otpForRegistrationAtSignUp"
            android:layout_margin="@dimen/twenty_dp"
            android:background="@drawable/rec_gradiant"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/submitOTP"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>